...
                                  selectedProperties!.contains(element.id),
                            )
                            .toList()
                        : [],
                    onConfirm: onSelected,
                    searchable: true,
                    buttonText: const Text('Properties (optional)'),
                    title: const Text('Properties'),
                    dialogHeight: MediaQuery.sizeOf(context).height * .5,
                    selectedColor: Theme.of(context).primaryColor,
                    chipDisplay: MultiSelectChipDisplay(
                      chipColor: Theme.of(context).primaryColor,
                      textStyle: VegaSemanticTypographies.labelRegularXs
...
