...
      ),
      trailing: Row(
        mainAxisSize: MainAxisSize.min,
        children: [
          (onAddPressed != null)
              ? IconButton(
                  key: const Key('AddLinkButton'),
                  onPressed: () {
                    onAddPressed!();
                  },
                  icon: const Icon(Icons.add_link),
                  iconSize: 20,
                )
...
