...
                      child: Row(
                        mainAxisSize: MainAxisSize.min,
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          Expanded(
                            child: SelectableText(
                              key: const Key('GeneratedLink'),
                              generatedLink,
                              style: VegaSemanticTypographies.bodyMediumS
                                  .copyWith(overflow: TextOverflow.ellipsis),
                            ),
                          ),
                        ],
...
